fluent-syntax/test/fixtures_behavior/second-attribute-starts-from-nl.ftl
key = Value
    .label = Value
.accesskey = K
//~ ERROR E0002, pos 31
